--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -11,3 +11,12 @@
 
   min-height: 100vh;
 }
+
+.page-wrapper {
+  flex-grow: 1;
+  padding-left: 50px;
+}
+
+.inner-container {
+  display: flex;
+}
