--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -1,7 +1,10 @@
+.Button {
+  color: var(--primary-color);
+}
+
 .clear {
   border: none;
   outline: none;
   background: none;
   padding: 0;
-  margin: 0;
 }
