storybook theme selector throw global types

--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -1,5 +1,6 @@
 .Button {
   color: var(--primary-color);
+  padding: 10px 15px;
 }
 
 .clear {
@@ -12,6 +13,5 @@
 .outline {
   padding: 10px 15px;
   border: 1px solid var(--primary-color);
-  color: var(--primary-color);
-  // color: green;
+  color: var(--seconary-color);
 }
