--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -2,8 +2,8 @@
   --bg-color: #0e0e75;
   --inverted-bg-color: #e8e8ea;
 
-  --primary-color: #049604;
-  --seconary-color: #04ff04;
+  --primary-color: #0ade0a;
+  --secondary-color: #06b806;
 
   --inverted-primary-color: #022bb2;
   --inverted-secondary-color: #0449e0;
