--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,10 +1,10 @@
 .app.light {
-  --bg-color: #e8e8ea;
-  --inverted-bg-color: #0e0e75;
+  --bg-color: #e5e5eb;
+  --inverted-bg-color: #2020aa;
 
-  --primary-color: #022bb2;
+  --primary-color: #488ebc;
   --seconary-color: #0449e0;
 
-  --inverted-primary-color: #049604;
-  --inverted-secondary-color: #04ff04;
+  --inverted-primary-color: #0ade0a;
+  --inverted-secondary-color: #06b806;
 }
