--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -11,7 +11,53 @@
 }
 
 .outline {
-  padding: 10px 15px;
+  
   border: 1px solid var(--primary-color);
   color: var(--seconary-color);
+}
+
+.background {
+  background: var(--bg-color);
+  color: var(--primary-color);
+  border: none;
+}
+
+.backgroundInverted {
+  background: var(--inverted-bg-color);
+  color: var(--inverted-primary-color);
+  border: none;
+}
+
+.square {
+  padding: 0;
+  height: 40px;
+  width: 40px;
+}
+
+.square.size_m {
+  width: var(--font-line-m);
+  height: var(--font-line-m);
+}
+
+.square.size_l {
+  width: var(--font-line-l);
+  height: var(--font-line-l);
+}
+
+.square.size_xl {
+  width: var(--font-line-xl);
+  height: var(--font-line-xl);
+  
+}
+
+.size_xl {
+  font-size: var(--font-size-xl);
+}
+
+.size_l {
+  font-size: var(--font-size-l);
+}
+
+.size_m {
+  font-size: var(--font-size-m);
 }
