--- a/src/widgets/Sidebar/ui/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar.module.scss
@@ -6,14 +6,64 @@
   transition: width 0.3s;
 }
 
-.collapsed {
-  width: var(--sidebar-width-collapsed);
-}
-
 .themeSwitcher {
   position: absolute;
   bottom: 50px;
   width: 100%;
   display: flex;
-  justify-content: center;
+  margin-left: 0;
+  // margin: 0 auto;
+}
+
+.collapsed {
+  width: var(--sidebar-width-collapsed);
+  .themeSwitcher {
+    flex-direction: column;
+  }
+
+  .linkText {
+    width: 0;
+    opacity: 0;
+    transition: opacity 0.2s;
+    // margin: 0;
+  }
+
+  // .icon {
+  //   flex: 1;
+  // }
+}
+
+.collapseBtn {
+  position: absolute;
+  bottom: 32px;
+  right: -32px;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  margin-left: 30px;
+}
+
+// .linkWithIcon{
+//   display: flex;
+//   // align-items: baseline;
+// }
+
+.link {
+  display: flex;
+  margin-bottom: 20px;
+  // color: red;
+}
+
+.icon {
+  fill: var(--inverted-primary-color);
+  // flex: 1;
+}
+
+.linkText {
+  margin-left: 20px;
+  white-space: nowrap;
+  transition: opacity 0.2s;
 }
