--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -8,3 +8,14 @@
   --inverted-primary-color: #0ade0a;
   --inverted-secondary-color: #06b806;
 }
+
+.Modal {
+  --bg-color: #e5e5eb;
+  --inverted-bg-color: #2020aa;
+
+  --primary-color: #488ebc;
+  --seconary-color: #0449e0;
+
+  --inverted-primary-color: #0ade0a;
+  --inverted-secondary-color: #06b806;
+}
