--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -3,12 +3,14 @@
 @import "themes/dark";
 @import 'themes/normal';
 
-.app {
+body {
   font: var(--font-m);
+  color: var(--primary-color);
+}
+
+.app {
 
   background: var(--bg-color);
-  color: var(--primary-color);
-
   min-height: 100vh;
   // padding-left: 30px;
 }
