--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -8,3 +8,14 @@
   --inverted-primary-color: #022bb2;
   --inverted-secondary-color: #0449e0;
 }
+
+.Modal {
+  --bg-color: #0e0e75;
+  --inverted-bg-color: #e8e8ea;
+
+  --primary-color: #0ade0a;
+  --secondary-color: #06b806;
+
+  --inverted-primary-color: #022bb2;
+  --inverted-secondary-color: #0449e0;
+}
