--- a/src/app/styles/variables/globals.scss
+++ b/src/app/styles/variables/globals.scss
@@ -18,6 +18,12 @@
   --sidebar-width: 300px;
   --sidebar-width-collapsed: 80px;
 
+  // z index
+  --modal-z-index: 10;
+
+  // colors
+  --modal-bg-color: rgba(0 0 0 / 60%)
+
 
 
 }
